@@ -527,6 +527,7 @@
  *                          core_server_conf.
  * 20120211.85 (2.4.40-dev) add ap_set_conn_count().
  * 20120211.86 (2.4.35-dev) Add forward_100_continue{,_set} to proxy_dir_conf
+ * 20120211.87 (2.4.40-dev) Add dav_popen_propdb
  */
 
 #define MODULE_MAGIC_COOKIE 0x41503234UL /* "AP24" */
@@ -534,7 +535,7 @@
 #ifndef MODULE_MAGIC_NUMBER_MAJOR
 #define MODULE_MAGIC_NUMBER_MAJOR 20120211
 #endif
-#define MODULE_MAGIC_NUMBER_MINOR 86                  /* 0...n */
+#define MODULE_MAGIC_NUMBER_MINOR 87                  /* 0...n */
 
 /**
  * Determine if the server's current MODULE_MAGIC_NUMBER is at least a
